--- a/coffee.css
+++ b/coffee.css
@@ -268,9 +268,17 @@ li
 
 .barchart .total
 {
+	padding-top: 5px;
     display: table-cell;
     text-align: right;
     font-weight: bold;
+}
+
+.barchart .subtotal
+{
+	padding-top: 2px;
+    display: table-cell;
+    text-align: right;
 }
 
 .barchart .bardata
